2013-01-06  Mike Frysinger  <vapier@gentoo.org>

	* libc/ctype/jp2uc.c: Include string.h.
	
2013-12-23  Jeff Johnston  <jjohnstn@redhat.com>

	* NEWS: Update with 2.1.0 info.
	* README: Ditto.
	* acinclude.m4: Change version number to 2.1.0.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* Makefile.in: Regenerated.
	* doc/aclocal.m4: Ditto.
	* doc/configure: Ditto.
	* libc/*/aclocal.m4: Ditto.
	* libc/*/configure: Ditto.
	* libc/libc.texinfo: Ditto.
	* libm/*/aclocal.m4: Ditto.
	* libm/*/configure: Ditto.
	* libm/libm.texinfo: Ditto.
	* libc/sys/linux/shared.ld: Add VERS_2.1

2013-12-22  JF Bastien  <jfb@chromium.org>

	* libc/include/limits.h: Define LLONG_MIN, LLONG_MAX and ULLONG_MAX 
	for C++11 too.
	* libc/include/stdlib.h: Define struct lldiv_t, _Exit, atoll, llabs 
	and lldiv for C99 and C++11.  Move wcstold to wchar.h.
	* libc/include/wchar.h: Define WCHAR_MIN and WCHAR_MAX according to
	__WCHAR_UNSIGNED__ if it is provided, and correct the limit when
	unsigned (to 32 all-1 bits, not 31).  Define FILE as in stdio.h.
	Move wcstold from stdlib.h here.

2013-12-20  Nick Clifton  <nickc@redhat.com>

	* configure.host (newlib_cflags): Use -Os, -ffunction-sections and
	-fdata-sections for RL78.

2013-12-19  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/vfwscanf.c (__SVFWSCANF_R): Fix fetching decimal_point in
	!_MB_CAPABLE as well as in !__HAVE_LOCALE_INFO_EXTENDED__ case.

2013-12-18  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/vfscanf.c (BUF): Change definition to take multibyte
	decimal point into account.
	(__SVFSCANF_R): Handle radix char language-dependent
	per POSIX.
	* libc/stdio/vfwscanf.c (__SVFWSCANF_R): Ditto.

2013-12-10  Jeff Johnston  <jjohnstn@redhat.com>

	* acconfig.h: Add _HAVE_CC_INHIBIT_LOOP_TO_LIBCALL.
	* newlib.hin: Ditto.
	* configure: Regenerate.
	* configure.in: Add setting of _HAVE_CC_INHIBIT_LOOP_TO_LIBCALL.
	* libc/string/local.h: Add check for _HAVE_CC_INHIBIT_LOOP_TO_LIBCALL